--- a/css/homepage.css
+++ b/css/homepage.css
@@ -301,7 +301,7 @@ body{
         font-size: 1.5vh;
     }
 
-    .links a:active
+    .links a:active, .contact a:active
     {
         color: grey;
     }
@@ -316,7 +316,7 @@ body{
     .contact
     {
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column-reverse
     }
 
     .contact img
@@ -324,5 +324,37 @@ body{
         width: 100%;
         height: 100%;
         border-radius: 5%;
+    }
+
+    .sectTwo hgroup
+    {
+        font-family: "Lobster";
+        font-size: 3vh;
+    }
+
+    .sectTwo article
+    {
+        font-family: "Roboto Slab";
+        font-size: 1.5vh;
+    }
+
+    .downloadCV
+    {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 3vh;
+    }
+    
+    .downloadCV a
+    {
+        border: 1px solid;
+        padding: 1.2vh;
+        font-family: "Roboto Slab";
+    }
+
+    .downloadCV:active
+    {
+        border: none;
     }
 }
