--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -239,3 +239,179 @@
         width: 10em;
     }
 }
+
+@media screen and (max-width: 768px)
+{
+    .parent
+    {
+        display: flex;
+        flex-direction: column;
+        margin-left: 2vh;
+        margin-right: 2vh;
+    }
+
+    .aboutMe hgroup
+    {
+        font-family: "Lobster";
+        font-size: 5vh;
+        border-bottom: 1px solid;
+        margin-bottom: 2vh;
+    }
+
+    .aboutMe aside
+    {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .aboutMeBody
+    {
+        display: flex;
+        flex-direction: column;
+        gap: 2vh;
+    }
+
+    .aboutMeBody p
+    {
+        font-family: "Roboto Slab";
+        font-size: 1.4vh;
+    }
+
+    .aboutMeBody figure
+    {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .aboutMeBody img
+    {
+        width: 40vw;
+    }
+
+    .skills aside ul
+    {
+        display: flex;
+        flex-direction: column;
+        gap: 1vh;
+        font-family: "Roboto Slab";
+        font-size: 1.7vh;
+    }
+
+    .details
+    {
+        font-family: "Roboto Slab";
+        font-size: 1.5vh;
+        border-top: 1px solid;
+        border-bottom: 1px solid;
+        margin-top: 2vh;
+        margin-bottom: 2vh;
+        padding-top: 1vh;
+        padding-bottom: 1vh;
+    }
+
+    .downloadCV
+    {
+        font-family: "Staatliches";
+        font-size: 2vh;
+        margin-top: 1vh;
+    }
+
+    .downloadCV:active
+    {
+        color: grey;
+    }
+
+    .exp figure
+    {
+        display: none;
+    }
+
+    .exp hgroup
+    {
+        font-family: "Lobster";
+        font-size: 4vh;
+        margin-bottom: 2vh;
+        padding-bottom: 2vh;
+        border-bottom: 1px solid;
+    }
+
+    .table
+    {
+        display: flex;
+        flex-direction: column;
+        gap: 2.2vh;
+        margin-bottom: 2vh;
+        padding-bottom: 2vh;
+        border-bottom: 1px solid;
+    }
+
+    .table article
+    {
+        display: flex;
+        flex-direction: row;
+
+    }
+
+    .table aside
+    {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5vh;
+    }
+
+    .year, .role
+    {
+        font-family: "Staatliches";
+        font-size: 2vh;
+    }
+
+    .comp, .desc
+    {
+        font-family: "Roboto Slab";
+        font-size: 1.5vh;
+    }
+
+    .role
+    {
+        color: grey;
+    }
+
+    .year, .comp
+    {
+        width: 20vh;
+    }
+
+    .awards hgroup
+    {
+        font-family: "Lobster";
+        font-size: 4vh;
+        padding-bottom: 2vh;
+        margin-bottom: 2vh;
+        border-bottom: 1px solid;
+    }
+
+    .awards div 
+    {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5vh;
+    }
+
+    .awards ul
+    {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .awards .desc
+    {
+        color: grey;
+    }
+
+    .awards li
+    {
+        font-family: "Staatliches";
+        font-size: 1.8vh;
+    }
+}
