--- a/css/login.css
+++ b/css/login.css
@@ -74,3 +74,66 @@
         background-color: linen;
     }
 }
+
+@media screen and (max-width: 768px)
+{
+    .parent
+    {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    form
+    {
+        display: flex;
+        flex-direction: column;
+        gap: 2vh;
+        background-color: rgb(245, 226, 206);
+        border: 1px solid rgb(215, 181, 147);
+        border-radius: 5px;
+        padding: 2vh;
+    }
+
+    form hgroup
+    {
+        font-family: "Lobster";
+        font-size: 5vh;
+    }
+
+    .inputs
+    {
+        display: flex;
+        flex-direction: column;
+        gap: 1vh;
+    }
+
+    .inputs input
+    {
+        background-color: white;
+        border: 1px solid;
+        font-family: "Roboto Slab";
+        height: 5vh;
+        padding-left: 1vh;
+    }
+
+    .buttons
+    {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 2vh;
+
+    }
+
+    .buttons input
+    {
+        font-family: "Roboto Slab";
+        font-size: 2vh;
+        background-color: white;
+        border: 1px solid;
+        border-radius: 5px;
+        width: 100%;
+        height: 4.5vh;
+    }
+}
